Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.4.0, 5.14.1, 5.15.0 Beta2
-
Fix Version/s: 5.15.1
-
Component/s: GUI: Look'n'Feel
-
Platform/s:
-
Commits:91d18c646443c812addf6d1cdada99d3c2d3a3ec (qt/qtbase/5.15)
Attachments
For Gerrit Dashboard: QTBUG-42944 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
298322,2 | iOS: Pick up theme palette from system colors | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |